# polygonal_tests

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  vcpkg.json
cmake/: add_targets.cmake  dependency.cmake  spirv.cmake
cmake/stb_include/: stb_include_app.cpp
cmake/stb_include/include/: stb_include.h
include/core/: imgui.hpp  math.hpp  mesh.hpp  utility.hpp  window.hpp
include/core/ext/: eigen_matrix.ext
shaders/src/: draw_bary.frag  draw_bary.vert  draw_mvc.frag  draw_mvc.vert  draw_polygon.frag  draw_polygon.vert
src/app/: mean_value_coordinates.cpp
src/core/: imgui.cpp
